envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9000
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: file-logger-access-logs-http-connection-manager
                    typed_config:
                      # File Access Log Sink
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      log_format:
                        text_format_source:
                          inline_string: >
                            [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %REQ(:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %BYTES_RECEIVED% %BYTES_SENT% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST% %DURATION% %REQUEST_DURATION% %REQUEST_TX_DURATION% %RESPONSE_DURATION% %RESPONSE_TX_DURATION% foo: %DYNAMIC_METADATA(api_platform.policy_engine.envoy.f [...]
                        formatters:
                          - name: envoy.formatter.req_without_query
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery
                http_filters:
                  - name: lua_filter_with_custom_name_0
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      default_source_code:
                        inline_string:
                          function envoy_on_request(request_handle)
                            request_handle:logInfo("Hello from lua-0 DEFAULT")
                          end
                          
                          function envoy_on_response(response_handle)
                            response_handle:logInfo("Bye from lua-0 DEFAULT")
                          end
                  - name: api_platform.policy_engine.envoy.filters.http.ext_proc-1
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-processor-grpc-service
                        timeout: 0.250s
                      failure_mode_allow: false
                      route_cache_action: CLEAR
                      metadata_options:
                        forwarding_namespaces:
                          typed:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                          untyped:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                        receiving_namespaces:
                          typed:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                          untyped:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                        request_trailer_mode: SKIP
                        response_trailer_mode: SKIP
                        # https://www.envoyproxy.io/docs/envoy/v1.33.0/api-v3/extensions/filters/http/ext_proc/v3/processing_mode.proto#envoy-v3-api-enum-extensions-filters-http-ext-proc-v3-processingmode-bodysendmode
                        request_body_mode: NONE
                        response_body_mode: NONE
                      message_timeout:
                        seconds: 20
                        nanos: 250000000 # 250ms
                  - name: api_platform.policy_engine.envoy.filters.http.ext_proc-2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-processor-grpc-service
                        timeout: 0.250s
                      failure_mode_allow: false
                      route_cache_action: RETAIN
                      metadata_options:
                        forwarding_namespaces:
                          typed:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                          untyped:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                        receiving_namespaces:
                          typed:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                          untyped:
                            - "api_platform.policy_engine.envoy.filters.http.ext_proc"
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                        request_trailer_mode: SKIP
                        response_trailer_mode: SKIP
                        # https://www.envoyproxy.io/docs/envoy/v1.33.0/api-v3/extensions/filters/http/ext_proc/v3/processing_mode.proto#envoy-v3-api-enum-extensions-filters-http-ext-proc-v3-processingmode-bodysendmode
                        request_body_mode: NONE
                        response_body_mode: NONE
                      message_timeout:
                        seconds: 20
                        nanos: 250000000 # 250ms
                  - name: lua_filter_with_custom_name_1
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      default_source_code:
                        inline_string:
                          function envoy_on_request(request_handle)
                            request_handle:logInfo("Hello from lua-1 DEFAULT")
                          end
                          
                          function envoy_on_response(response_handle)
                            response_handle:logInfo("Bye from lua-1 DEFAULT")
                          end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: any-domain
                      domains:
                        - "*"
                      routes:
                        - name: localhost
                          match:
                            prefix: "/local"
                          route:
                            regex_rewrite:
                              pattern:
                                regex: /local/(.*)
                              substitution: /bar/\1
                            append_x_forwarded_host: true
                            cluster: localhost_service
                        - name: upstream-1
                          match:
                            prefix: "/svc-1"
                          route:
                            # regex_rewrite:
                            #   pattern:
                            #     regex: /svc-1/(.*)
                            #   substitution: /bar/\1
                            # append_x_forwarded_host: true
                            # cluster: upstream-service-1
                            cluster_header: x-target-cluster 
                          typed_per_filter_config:
                            lua_filter_with_custom_name_0:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              source_code:
                                inline_string: |
                                  function envoy_on_request(request_handle)
                                    request_handle:logInfo("Hello from lua-0 svc-1 route")
                                    request_handle:headers():replace("x-target-cluster", "upstream-service-1")
                                  end
                                  
                                  function envoy_on_response(response_handle)
                                    response_handle:logInfo("Bye from lua-0 svc-1 route")
                                  end
                            lua_filter_with_custom_name_1:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              source_code:
                                inline_string: |
                                  function envoy_on_request(request_handle)
                                    request_handle:logInfo("Hello from lua-1 svc-1 route")
                                    -- request_handle:headers():replace("x-target-cluster", "upstream-service-1")
                                    -- request_handle:headers():replace(":path", "/hello-world")
                                    request_handle:logInfo("Set x-target-cluster to upstream-service-1")
                                  end
                                  
                                  function envoy_on_response(response_handle)
                                    response_handle:logInfo("Bye from lua-1 svc-1 route")
                                  end
                http_protocol_options: {}

  clusters:
    - name: upstream-service-1
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream-service-1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: request_info-1
                      port_value: 8080
    - name: upstream-service-2
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream-service-2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: request_info-2
                      port_value: 8080
    - name: ext-processor-grpc-service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext-processor-grpc-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: host.docker.internal
                  port_value: 9001
    - name: localhost_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: localhost_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8000
